--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
     "ember-cli-qunit": "^4.1.1",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-template-lint": "^0.7.5",
     "ember-cli-uglify": "^2.0.0",
     "ember-data": "~2.17.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.17.0",
-    "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "ember-template-lint": "^0.8.15",
+    "loader.js": "^4.2.3",
+    "stylelint": "^9.2.1",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-scss": "^3.1.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
