--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-source": "~2.17.0",
     "ember-template-lint": "^0.8.15",
     "loader.js": "^4.2.3",
+    "paper-data-table": "^0.1.4",
     "stylelint": "^9.2.1",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-scss": "^3.1.0"
