--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.17.2",
     "ember-cli-app-version": "^3.0.0",
-    "ember-cli-babel": "^6.6.0",
+    "ember-cli-babel": "^6.14.1",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.2.1",
     "ember-cli-htmlbars": "^2.0.1",
@@ -36,6 +36,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-paper": "^1.0.0-beta.7",
+    "ember-paper-expansion-panel": "0.0.3",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.17.0",
     "ember-template-lint": "^0.8.15",
